Backport InjectorNodeFinderImpl rework to Java 8